# Strip_Packaging2D

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
customs/: default.txt
include/: blocks.h  spp_genetic.h  spp_gfx_rep.h  spp_individual.h  spp_tests.h
include/glad/: glad.h
include/glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
include/glfw/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  blocks.cpp  cmake_install.cmake  glad.c  main.cpp  spp_genetic.cpp  spp_gfx_rep.cpp  spp_individual.cpp  spp_tests.cpp
